gobmkida/g1/print_top_moves
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_top_moves/src/engine/value_moves.c:3129:26: error: too many arguments to function call, expected 2, have 3
record_top_move( j, *v1, 0.0); 
~~~~~~~~~~~~~~~          ^~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_top_moves/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_top_moves/src/engine/value_moves.c:3137:18: error: use of undeclared identifier 'dword_A0603C'
v4 = *( float *)&dword_A0603C[k]; 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_top_moves/src/obj/1/value_moves.o] Error 1
